[gd_scene load_steps=6 format=2]

[ext_resource path="res://titlescreen.png" type="Texture" id=1]
[ext_resource path="res://AtariFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Title Screen.wav" type="AudioStream" id=4]
[ext_resource path="res://AtariFontSMALL.tres" type="DynamicFont" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 5.42962, 4.82809 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="PressFire" type="Label" parent="."]
margin_top = 140.0
margin_right = 216.0
margin_bottom = 151.0
custom_fonts/font = ExtResource( 2 )
text = "Press Fire to Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBy" type="Label" parent="."]
margin_top = 180.0
margin_right = 216.0
margin_bottom = 190.0
custom_fonts/font = ExtResource( 5 )
text = "A MiniJam game by Cheeky Lions"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]
